--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
@@ -20,9 +20,9 @@
 @using (Html.BeginForm("Nuevo", "ImportacionMarcaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
-
-    @*<div class="row">
+<div class="row">
         <div class="col-md-4">
             <div class="form-group">
                 <label for="IdCargo">Sucursal*</label>
@@ -47,96 +47,49 @@
             </div>
         </div>
 
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Nómina*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
-               {
-                   settings.Name = "IdNomina";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdNomina_Tipo";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_nomina).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Proceso*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdNominaTipo, settings =>
-               {
-                   settings.Name = "IdNominaTipo";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdNomina_TipoLiqui", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdNomina_TipoLiqui";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "DescripcionProcesoNomina";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_nomina_tipo).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>*@
-
-   
+    </div>
 
 
-    <div class="row">
+
+
+<div class="row">
+    <div class="col-md-12">
+
         <div class="col-md-12">
 
-            <div class="col-md-12">
+            @Html.DevExpress().UploadControl(settings => {
+            settings.Name = "UploadControlFile";
+            settings.CallbackRouteValues = new { Controller = "ImportacionMarcaciones", Action = "UploadControlUpload" };
+            settings.ShowUploadButton = true;
+            settings.ShowProgressPanel = true;
+            settings.NullText = "Click here to browse files...";
+            settings.ClientSideEvents.FileUploadComplete = "function(s, e) { GridViewPartial_importacion_marcaciones_det.PerformCallback({ path: e.callbackData}); }";
+            }).GetHtml()
 
-                @Html.DevExpress().UploadControl(settings => {
-                settings.Name = "UploadControlFile";
-                settings.CallbackRouteValues = new { Controller = "ImportacionMarcaciones", Action = "UploadControlUpload" };
-                settings.ShowUploadButton = true;
-                settings.ShowProgressPanel = true;
-                settings.NullText = "Click here to browse files...";
-                settings.ClientSideEvents.FileUploadComplete = "function(s, e) { GridViewPartial_importacion_marcaciones_det.PerformCallback({ path: e.callbackData}); }";
-                }).GetHtml()
-
-            </div>
         </div>
     </div>
+</div>
 
 
-    <div class="row">
+<div class="row">
+    <div class="col-md-12">
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="detalle">Detalle de la novedad</label>
-                    @Html.Action("GridViewPartial_importacion_marcaciones_det")
-                    @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="detalle">Detalle de la novedad</label>
+                @Html.Action("GridViewPartial_importacion_marcaciones_det")
+                @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+</div>
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","ImportacionNovedades",new { Area = "RRHH" },null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <a class="btn btn-default" href="@Url.Action("Index","ImportacionNovedades",new { Area = "RRHH" },null)">Cancelar</a>
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 }
 
 
