--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
@@ -290,7 +290,17 @@
             </div>
         </div>
     </div>
-
+    
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="checkbox">
+                    <label for="GenerarDevolucion">@Html.CheckBoxFor(q => q.GenerarDevolucion) Cerrar cambios</label>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","CambioProducto",new { Area = "Facturacion" },null)">Cancelar</a>
