--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_consignacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_consignacion.cshtml
@@ -105,6 +105,15 @@
 
             });
         });
+
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("INV_014", "InventarioReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdConsignacion = DataBinder.Eval(c.DataItem, "IdConsignacion") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
