--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -2,7 +2,7 @@
 
 @model Core.Erp.Info.CuentasPorPagar.cp_orden_pago_Info
 @{
-    ViewBag.Title = "Nueva orden";
+    ViewBag.Title = "Nueva orden de pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -28,6 +28,42 @@
         <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
+                    <label for="IdSucursal">Sucursal*</label>
+                    
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="IdTipo_op">Tipo orden pago*</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op, settings =>
+               {
+                   settings.Name = "IdTipo_op";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdTipo_op";
+                   settings.Properties.ValueType = typeof(string);
+                   settings.Properties.TextField = "Descricpion";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
                     <label for="IdSucursal">Tipo de persona*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipo_Persona, settings =>
                {
@@ -50,38 +86,15 @@
 
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="IdTipo_op">Tipo orden pago*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op, settings =>
-               {
-                   settings.Name = "IdTipo_op";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdTipo_op";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descricpion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
                     <label for="IdProveedor">Beneficiario*</label>
                     @Html.Partial("_CmbPersona_OP", Model.IdEntidad)
                     @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdBanco_acreditacion">Tipo flujo</label>
