--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -74,21 +74,21 @@
                 <div class="form-group">
                     <label for="IdTipo_op">Tipo orden pago*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op, settings =>
-               {
-                   settings.Name = "IdTipo_op";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdTipo_op";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descricpion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
-               }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                       {
+                           settings.Name = "IdTipo_op";
+                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                           settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                           settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                           //Campo ID
+                           settings.Properties.ValueField = "IdTipo_op";
+                           settings.Properties.ValueType = typeof(string);
+                           settings.Properties.TextField = "Descricpion";
+                           //Boton para seleccionar ningun registro
+                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                       }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -146,6 +146,8 @@
                 <div class="form-group">
                     <label for="IdTipo_Persona">Tipo persona:*</label>
                     @Html.DropDownListFor(q => q.IdTipo_Persona, new SelectList(ViewBag.lst_tipo_personas, "Key", "Value"), new { @class = "form-control", @id = "IdTipo_Persona" })
+                    @*@Html.DropDownListFor(q => q.IdTipo_Persona, new SelectList(ViewBag.lst_tipo_personas, "IdTipo_Persona", "Descricpion"), new { @class = "form-control", @id = "IdTipo_Persona" })*@
+                    @Html.ValidationMessageFor(q => q.IdTipo_Persona, "", new { @class = "text-danger" })                    
                 </div>
             </div>
             <div class="col-md-9">
