--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_detalle_op.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_detalle_op.cshtml
@@ -38,7 +38,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "Valor_a_pagar";
-            column.Caption = "$Valor";
+            column.Caption = "Valor";
             column.Width = Unit.Percentage(15);
             column.EditorProperties().SpinEdit(sp =>
             {
