--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/_GridViewPartial_ordenes_pagos.cshtml
@@ -116,7 +116,7 @@
             });
         });
         settings.Columns.Add("Observacion","Observación").Width = Unit.Percentage(20);
-        settings.Columns.Add("IdEstadoAprobacion", "Estado Aprobación").Width = Unit.Percentage(10);
+        settings.Columns.Add("Descripcion", "Estado Aprobación").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
