--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
@@ -10,7 +10,8 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Nuevo", "NominaTipoLiquidacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-
+    @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdRol);
 
     <div class="row">
         <div class="col-md-12">
