--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Modificar.cshtml
@@ -9,73 +9,75 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "PagoBenediciosSociales", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
+{@Html.HiddenFor(q => q.IdEmpresa);
+@Html.HiddenFor(q => q.IdRol);
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Anio">Año*</label>
-                    @Html.TextBoxFor(q => q.Anio, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Anio, "", new { @class = "text-danger" })
-                </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="Anio">Año*</label>
+                @Html.TextBoxFor(q => q.Anio, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.Anio, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-2">
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
                 <div class="form-group">
-                    <div class="form-group">
-                        <label for="descuento_mensual">Pago</label>
-                        @Html.DevExpress().RadioButtonFor(q => q.decimoIII, settings =>
-                       {
-                           settings.Name = "decimoIII";
-                           settings.GroupName = "beneficio";
-                           settings.Text = "Decimo tercer sueldo";
-                           settings.Properties.ClientSideEvents.CheckedChanged = "function(s, e) {mostar()}";
-                       }).GetHtml()
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="descuento_quincena">Pago</label>
-                        @Html.DevExpress().RadioButtonFor(q => q.decimoIV, settings =>
+                    <label for="descuento_mensual">Pago</label>
+                    @Html.DevExpress().RadioButtonFor(q => q.decimoIII, settings =>
                    {
-                       settings.Name = "decimoIV";
+                       settings.Name = "decimoIII";
                        settings.GroupName = "beneficio";
-                       settings.Text = "Decimo cuarto sueldo";
+                       settings.Text = "Decimo tercer sueldo";
+                       settings.Properties.ClientSideEvents.CheckedChanged = "function(s, e) {mostar()}";
                    }).GetHtml()
-                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
+        <div class="col-md-2">
+            <div class="form-group">
                 <div class="form-group">
-                    <label for="ca_descripcion">Descripción*</label>
-                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
-
-
+                    <label for="descuento_quincena">Pago</label>
+                    @Html.DevExpress().RadioButtonFor(q => q.decimoIV, settings =>
+               {
+                   settings.Name = "decimoIV";
+                   settings.GroupName = "beneficio";
+                   settings.Text = "Decimo cuarto sueldo";
+               }).GetHtml()
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="ca_descripcion">Descripción*</label>
+                @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
 
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Procesar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","PagoBenediciosSociales",new { Area = "RRHH" },null)">Cancelar</a>
 
-
+            </div>
+        </div>
     </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+</div>
+
+
+
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Procesar</button>
+    <a class="btn btn-default" href="@Url.Action("Index","PagoBenediciosSociales",new { Area = "RRHH" },null)">Cancelar</a>
+
+
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
 }
 
 
