--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -62,6 +62,7 @@
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdOrdenPago)
     @Html.HiddenFor(q => q.IdEstadoAprobacion)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
