--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_ConsignacionDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_ConsignacionDet.cshtml
@@ -9,7 +9,7 @@
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Consignacion", Action = "EditingAddNew", Area = "Inventario" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Consignacion", Action = "EditingUpdate", Area = "Inventario" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { ConNUEVtroller = "Consignacion", Action = "EditingDelete", Area = "Inventario" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Consignacion", Action = "EditingDelete", Area = "Inventario" };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
