--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_ordencompralocal";
-        settings.CallbackRouteValues = new { Controller = "OrdenCompraLocal", Action = "GridViewPartial_ordencompralocal" };
+        settings.CallbackRouteValues = new { Controller = "OrdenCompraLocal", Action = "GridViewPartial_ordencompralocal", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
         settings.KeyFieldName = "IdOrdenCompra";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
